--- a/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj
+++ b/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj
@@ -141,6 +141,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Graphic.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\DxLib.vc140.3.2.2.1\build\native\DxLib.vc140.targets" Condition="Exists('..\packages\DxLib.vc140.3.2.2.1\build\native\DxLib.vc140.targets')" />
