--- a/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj.filters
+++ b/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj.filters
@@ -17,4 +17,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Graphic.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
