--- a/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj
+++ b/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj
@@ -142,7 +142,11 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Event.h" />
     <ClInclude Include="Graphic.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Event.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
