--- a/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj.filters
+++ b/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="Graphic.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Event.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Event.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
