--- a/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj
+++ b/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Event.cpp" />
+    <ClCompile Include="Graphic.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
