--- a/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj.filters
+++ b/SugorokuRPG_2P/SugorokuRPG_2P.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Event.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Graphic.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
